# Is_innovation

./: .gitignore  CMakeLists.txt  README.md  anti_escape_detect.cpp  attack.py  fragmented_attack.py
database/: create-db-template.sql  load.cpp  pattern_database.db  patternfile  patternfile.txt  patternfile2sql.py  read_db  read_db.cpp
demo/: PatternDetection.c  patternDetection.cpp  patternfile
docs/: design_doc.md
gui/: main_window  main_window.c  main_window.glade
patterns/: patternfile
src/: anti_escape_detect.cpp  firewall.cpp  firewall.h  main.cpp  matcher.cpp  matcher.h  packet_reassembly.cpp  packet_reassembly.h  packet_structures.h  pattern_reader.cpp  pattern_reader.h  pcap_handler.cpp  pcap_handler.h
src/algorithms/: aho_corasick.cpp  aho_corasick.h  boyer_moore.cpp  boyer_moore.h  brute_force.cpp  brute_force.h  kmp.cpp  kmp.h
src/firewall/: firewall.cpp
tests/: attack.py  send.py  test_algorithms.cpp  test_pattern_reader.cpp  test_pcap_handler.cpp
